core/docs/grammer.bnf

TOKEN-'#'
TOKEN-WORD
TOKEN-CHAR
TOKEN-NUMBER
TOKEN-SPACE

Document := ElementD [ Document ] | eof
    Element := Title | Paragraph | Sentence | Word | Character | Number
    ElementD := Element ElementEnd
    ElementEnd := Newline [ ElementEnd ] | eof
Title := TOKEN-'#' Space Paragraph
Paragraph := Sentence [ Paragraph ]
Sentence := (Space | SentenceElement) [ Sentence ] ( Fullstop | ElementEnd(peak) )
    SentenceElement := Word | Number | Punctuation
Word := TOKEN-WORD
Number := TOKEN-NUMBER
Space := TOKEN-SPACE | TOKEN-DOMINANT-SPACE

eof := N/A
Newline := N/A
Punctuation := TOKEN-CHAR # not Fullstop
Fullstop := TOKEN-CHAR
Character := TOKEN-CHAR
